--- a/Calc.html
+++ b/Calc.html
@@ -4,46 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/Main.css"/>
+    <script src="Main.js"></script>
+    
+   
 </head>
 <body>
-    <div> class= "fundo">
-    <h1>Fernando OKamura Rodrigues</h1>
+    <div class="fundo">
+    <h1 class="nome">Fernando OKamura Rodrigues</h1>
 
-    <div class="Calculadora">
+    <div class="calculadora">
         <h1>Calculadora</h1>
-        <p id="resultado">Resultado</p>
+        <p id="resultado"></p>
         <table>
-            <tr>
+            <tr class="botao">
                 <td><button>C</button></td>
                 <td><button>&lt;</button></td>
                 <td><button>/</button></td>
                 <td><button>*</button></td>
             </tr>
             <tr>
-                <td><button>7</button></td>
-                <td><button>8</button></td>
-                <td><button>9</button></td>
+                <td><button onclick="insert('7')">7</button></td>
+                <td><button onclick="insert('8')">8</button></td>
+                <td><button onclick="insert('9')">9</button></td>
                 <td><button>-</button></td>
             </tr>
             <tr>
-                <td><button>4</button></td>
-                <td><button>5</button></td>
-                <td><button>6</button></td>
+                <td><button onclick="insert('4')">4</button></td>
+                <td><button onclick="insert('5')">5</button></td>
+                <td><button onclick="insert('6')">6</button></td>
                 <td><button>+</button></td>
             </tr>
             <tr>
-                <td><button>1</button></td>
-                <td><button>2</button></td>
-                <td><button>3</button></td>
-                <td rowspan="2"><button>=</button></td>
+                <td><button onclick="insert('3')">1</button></td>
+                <td><button onclick="insert('2')">2</button></td>
+                <td><button onclick="insert('3')">3</button></td>
+                <td rowspan="2"><button class="botao2">=</button></td>
             <tr>
-                <td colspan="2" ><button>0</button></td>
-                <td><button>.</button></td>
+                <td colspan="2" ><button class="botao3" onclick="insert('0')">0</button></td>
+                <td><button onclick="insert('.')">.</button></td>
         </table>
     </div>
 
 
-</div>
+</div> 
 
 
 
