--- a/Calc.html
+++ b/Calc.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/Main.css"/>
     <script src="Main.js"></script>
-    
-   
+       
 </head>
 <body>
     <div class="fundo">
@@ -17,40 +16,34 @@
         <h1>Calculadora</h1>
         <p id="resultado"></p>
         <table>
-            <tr class="botao">
-                <td><button onclick="clean()">C</button></td>
-                <td><button onclick="back()">&lt;</button></td>
-                <td><button onclick="insert('/')">/</button></td>
-                <td><button onclick="insert('*')">*</button></td>
+            <tr>
+                <td><button class="botao" onclick="clean()">C</button></td>
+                <td><button class="botao" onclick="back()">&lt;</button></td>
+                <td><button class="botao" onclick="insert('/')">/</button></td>
+                <td><button class="botao" onclick="insert('*')">*</button></td>
             </tr>
             <tr>
-                <td><button onclick="insert('7')">7</button></td>
-                <td><button onclick="insert('8')">8</button></td>
-                <td><button onclick="insert('9')">9</button></td>
-                <td><button onclick="insert('-')">-</button></td>
+                <td><button class="botao" onclick="insert('7')">7</button></td>
+                <td><button class="botao" onclick="insert('8')">8</button></td>
+                <td><button class="botao" onclick="insert('9')">9</button></td>
+                <td><button class="botao" onclick="insert('-')">-</button></td>
+            </tr> 
+            <tr>
+                <td><button class="botao" onclick="insert('4')">4</button></td>
+                <td><button class="botao" onclick="insert('5')">5</button></td>
+                <td><button class="botao" onclick="insert('6')">6</button></td>
+                <td><button class="botao" onclick="insert('+')">+</button></td>
             </tr>
             <tr>
-                <td><button onclick="insert('4')">4</button></td>
-                <td><button onclick="insert('5')">5</button></td>
-                <td><button onclick="insert('6')">6</button></td>
-                <td><button onclick="insert('+')">+</button></td>
-            </tr>
+                <td><button class="botao" onclick="insert('3')">1</button></td>
+                <td><button class="botao" onclick="insert('2')">2</button></td>
+                <td><button class="botao" onclick="insert('3')">3</button></td>
+                <td rowspan="2"><button class="botao1" onclick="calcular()">=</button></td>
             <tr>
-                <td><button onclick="insert('3')">1</button></td>
-                <td><button onclick="insert('2')">2</button></td>
-                <td><button onclick="insert('3')">3</button></td>
-                <td rowspan="2"><button class="botao2" onclick="calcular()">=</button></td>
-            <tr>
-                <td colspan="2" ><button class="botao3" onclick="insert('0')">0</button></td>
-                <td><button onclick="insert('.')">.</button></td>
+                <td colspan="2" ><button class="botao2" onclick="insert('0')">0</button></td>
+                <td><button class="botao" onclick="insert('.')">.</button></td>
         </table>
     </div>
-
-
 </div> 
-
-
-
-
 </body>
 </html>
